--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,30 +11,20 @@ Home page
 >
 </datatable>
 
-<div style="width:500px; margin-top:100px;">
+<div style="width:500px; margin-top:100px; ">
 <bd-input
     placeholder="placeholder"
-    [defaultView]="false"
-    [animated]="true"
-    [labelText]="'Estimated distance calculate'"
-    [errorText]="'test error'"
-    [invalid]="false"
-    >
+    [collapsedInput]="false"
+    [labelText]="'Estimated distance calculate'">
+    <span class="prefix" bd-prefix>$&nbsp;</span>
 </bd-input>
-<bd-input
-    [labelText]="'Estimated'"
-    [invalid]="true"
-    [defaultView]="false"
-    [errorText]="'test error'"
-    [attr.name]="'Andrew'">
-    <span class="prefix" md-prefix>$&nbsp;</span>
-</bd-input>
+
+<div style="margin-top:30px;"></div>
 
 <bd-input
     [labelText]="'Estimated'"
-    [defaultView]="true"
+    [collapsedInput]="true"
     [attr.name]="'Andrew'">
-    <span class="prefix" md-prefix>$&nbsp;</span>
 </bd-input>
 
 </div>
