FSPA-84 #comment refactoring code,removed lint err

--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -1,8 +1,8 @@
 <div class="bd-input-wrapper"
      [class.bd-focused]="_focused"
      [class.bd-invalid]="_isInvalid"
-     [class.bd-collapsed-input]="collapsedInput"
-     
+     [class.bd-collapsed-input]="isCollapsed"
+     [class.bd-expanded-input]="!isCollapsed"
 >
         <div class="bd-label">
           <label
