--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@ Home page
 <div style="width:500px; margin-top:100px; ">
 <bd-input
     placeholder="placeholder"
-    [collapsedInput]="false"
+    [collapsibleInput]="false"
     [labelText]="'Estimated distance calculate'">
     <span class="prefix" bd-prefix>$&nbsp;</span>
 </bd-input>
@@ -23,8 +23,9 @@ Home page
 
 <bd-input
     [labelText]="'Estimated'"
-    [collapsedInput]="true"
+    [collapsibleInput]="true"
     [attr.name]="'Andrew'">
 </bd-input>
+
 
 </div>
