--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -4,14 +4,16 @@ $nobel: #B3B2B2;
 $iron: #D7D8DB;
 $error: #fb3a3a;
 $error-background: rgba(251,58,58,0.2);
+
 @keyframes labelFlight {
-  from   {
+  from {
     left: 200px;
   }
   to {
     left: 0;
   }
 }
+
 .flex-element{
   display: flex;
   align-items: center;
@@ -94,7 +96,7 @@ $error-background: rgba(251,58,58,0.2);
   + .error-message{
     display: none;
   }
-  /* here is focused state on uncollapsed inout field */
+
   &.bd-focused{
     border-bottom-color: $seagul; 
     .bd-label{
@@ -116,36 +118,18 @@ $error-background: rgba(251,58,58,0.2);
           }
       }
   }
-  /* here is styles for collapsed input */
-  &.bd-collapsed-input{
+
+&.bd-collapsed-input{
     .bd-label{
       flex-grow: 1;
       color: $nobel;
       text-align: left;
       font-size: 16px;
-      label{
-        font-weight:normal;
-       }
-    }
-    &.bd-focused{
-        .bd-label{
-          position: relative;
-          flex-grow: 0;
-          width: 80px;
-          margin-right: 32px;
-          color: $seagul;
-          text-align: right;
-          font-size: 10px;
-          text-transform: uppercase;
-          label{
-            position: absolute;
-            top: -15px;
-            left: 0;
-            font-weight:normal;
-            animation: labelFlight 0.2s 1;
-          }
-        }
     }
   }
-
+  &.bd-expanded-input{
+    .bd-label{
+      animation: labelFlight 0.1s 1;
+    }
+  }
 }
