setup bootstrap dropdown module

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,8 @@
 Home page
-<datatable
-    class='material striped'
-    [rows]='rows'
-    [columns]="columns"
-    [columnMode]="'force'"
-    [headerHeight]="50"
-    [footerHeight]="50"
-    [rowHeight]="'auto'"
-    [limit]="10"
->
-</datatable>
 
-<bd-input 
-    placeholder="placeholder" 
-    [labelText]="'Estimated distance calculate'">
-</bd-input>
-<bd-input 
-    [attr.name]="'Andrew'">
-    <span md-prefix>$&nbsp;</span>
-</bd-input>
 
+<div style="margin:50px auto; width:400px; background:#006cff;padding:20px;">
+
+<bd-dropdown></bd-dropdown>
+
+</div>
