--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,23 @@ html, body{
   height: 100%;
   font-family: Arial, Helvetica, sans-serif
 }
+
+@font-face {
+	font-family: 'SFUIText-Bold';
+	src: ('../assets/fonts/sf-bold.woff');
+}
+@font-face {
+	font-family: 'SFUIText-Medium';
+	src: ('../assets/fonts/sf-medium.woff');
+}
+@font-face {
+	font-family: 'SFUIText-Regular';
+	src: ('../assets/fonts/sf-regular.woff');
+}
+
+body {
+	font-size: 14px;
+	font-family: 'SFUIText-Medium';
+	background: #F5F9FC;
+	overflow: hidden;
+}
