--- a/src/app/common/typeahead/typeahead-container.component.html
+++ b/src/app/common/typeahead/typeahead-container.component.html
@@ -2,7 +2,7 @@
     [ngStyle]="{top: top, left: left, display: 'block'}"
     (mouseleave)="focusLost()">
   <template ngFor let-match let-i="index" [ngForOf]="matches">
-    <li
+    <li *ngIf="!showLoader"
       [class.active]="isActive(match)"
       (mouseenter)="selectActive(match)">
       <a href="#"
@@ -15,12 +15,12 @@
       </a>
     </li>
   </template>
-  <li>
-    <a href="#"
-       *ngIf="footerTemplate"
-       (click)="footerClick($event)">
+  <li *ngIf="showLoader">
+    Loading
+  </li>
+  <li *ngIf="footerTemplate"
+    (click)="footerClick($event)">
         <template [ngTemplateOutlet]="footerTemplate">
         </template>
-    </a>
   </li>
 </ul>
