FSPA-84 #comment fixed markup, added new functionality

--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -19,6 +19,7 @@
 
           <div class="bd-input-infix">
             <input
+              #input
               name="bd-input-element"
               type="text"
               [(ngModel)]="value"
