--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@ Home page
 <bd-input
     placeholder="placeholder"
     [collapsibleInput]="false"
-    [labelText]="'Estimated of distance'">
+    [labelText]="'Date'">
     <span class="prefix" bd-prefix>$&nbsp;</span>
 </bd-input>
 
