--- a/src/app/common/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/common/bd-dropdown/bd-dropdown.component.html
@@ -1,65 +1,39 @@
-<div dropdown
-    class="bd-dropdown-container"
-    name="bd-dropdown-container"
-    (click)="_handleClick($event)">
-  <div
-    class="bd-dropdown-wrapper"
-    name="bd-dropdown-wrapper">
+<div dropdown class="bd-dropdown-container" name="bd-dropdown-container">
+  <a dropdownToggle id="simple-dropdown" class="bd-dropdown-wrapper" name="bd-dropdown-wrapper">
     <div class="bd-dropdown-label">
       <label>
         contact
       </label>
     </div>
-    <div class="bd-dropdown-value"
-          name="bd-dropdown-value"
->
-<button dropdownToggle>PUSH ME</button>
+    <div class="bd-dropdown-value" name="bd-dropdown-value">
+      <span *ngIf="_currentValue === undefined">Select Contact</span>
+      <span class="item-selected" *ngIf="_currentValue">{{_currentValue}}</span>
     </div>
     <div class="bd-dropdown-icon">
-        <i class="fa fa-sort"></i>
+      <i class="fa fa-sort"></i>
     </div>
-  </div>
+  </a>
   <div
     dropdownMenu
     class="bd-dropdown-list"
-    name="bd-dropdown-list"
-    [class.open]="_open"
-  >
-      <div class="dropdown__first-item">
-          Select Contact
-      </div>
-      <div class="dropdown__group">
-        <div class="dropdown-item"
-          name="dropdown-item"
-          value="Mark Bailey - Sales">
-          Mark Bailey - Sales
-        </div>
-        <div class="dropdown-item"
-          name="dropdown-item"
-          value="John Doe - unknown">
-          John Doe - unknown
-        </div>
-        <div class="dropdown-item"
-          name="dropdown-item"
-          value="Bill Gates - MS CEO">
-           Bill Gates - MS CEO
-        </div>
-        <div class="dropdown-item"
-          name="dropdown-item"
-          value="Jack Sparrow - Capitan">
-            Jack Sparrow - Capitan
-        </div>
-        <div class="dropdown-item"
-          name="dropdown-item"
-          value="John Rembo - Killer">
-           John Rembo - Killer
-        </div>
-      </div>
-
-      <div class="dropdown__last-item">
-          <button type="button" name="button">
-            Add Contact
-          </button>
-      </div>
+    aria-labelledby="simple-dropdown">
+    <ul>
+      <li
+        class="dropdown-header"
+        attr.value="false"
+        (click)="_handleDropdownHeaderClick($event)">
+          Leave empty
+      </li>
+      <li *ngFor="let item of _items"
+          attr.value="{{item}}"
+          (click)="_handleDropdownItemClick($event)">
+             {{item}}
+      </li>
+     <li class="dropdown-footer">
+       <button type="button" name="button">
+           Add Contact
+         </button>
+     </li>
+    </ul>
   </div>
 </div>
