--- a/src/app/common/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/common/bd-dropdown/bd-dropdown.component.scss
@@ -1,95 +1,125 @@
-$white: #FFFFFF;
-$black: #000000;
-$seagul: #75B3E2;
-$nobel: #B3B2B2;
-$iron: #D7D8DB;
-$error: #FB3A3A;
-$dropitem: #F5FEFE;
+$white: #fff;
+$black: #000;
+$seagul: #75b3e2;
+$nobel: #b3b2b2;
+$iron: #d7d8db;
+$error: #fb3a3a;
+$dropitem: #f5fefe;
 
-.bd-dropdown-container{
+.bd-dropdown-container {
+	a {
+		&:hover {
+			text-decoration: none;
+		}
+	}
 
-  .bd-dropdown-wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 50px;
-    border-bottom: 1px solid $iron;
-    background: $white;
-    outline: 0;
-      .bd-dropdown-label{
-        width: 80px;
-        margin-right: 32px;
-        color: $seagul;
-        text-align: right;
-        label{
-          text-transform: uppercase;
-          font-size: 10px;
-          font-weight: 300;
-        }
-      }
-      .bd-dropdown-value{
-        flex-grow: 1;
-        color: $nobel;
-      }
-      .bd-dropdown-icon{
-        margin-right: 17px;
-        color: $nobel;
-      }
-      &:hover{
-        cursor: pointer;
-      }
-  }
-  .bd-dropdown-list{
-    display:none;
-    div {
-      border-bottom: 1px solid $iron;
-      background: $dropitem;
-      color: $black;
-    }
-    .dropdown__first-item{
-      display: flex;
-      align-items: center;
-      height: 50px;
-      padding-left: 17px;
-      background: $white;
-      color: $nobel;
-    }
-    .dropdown__group{
-      display: block;
-      height: auto;
-      max-height: 150px;
-      overflow: scroll;
-      .dropdown-item{
-        display: flex;
-        align-items: center;
-        height: 50px;
-        padding: 0 0 0 17px;
-        border-bottom: 1px solid $iron;
-        &:hover{
-          cursor: pointer;
-        }
-      }
-    }
-    .dropdown__last-item{
-      display: flex;
-      height: 50px;
-      background: $white;
-      text-align: center;
-      button {
-        margin: 0 auto;
-        border: 0;
-        color: $seagul;
-        background: transparent;
-        &:focus{
-          outline: 0;
-        }
-      }
-    }
-  }
+	.bd-dropdown-wrapper {
+		display: flex;
+		width: 100%;
+		height: 50px;
+		background: $white;
+		border-bottom: 1px solid $seagul;
+		outline: 0;
+		align-items: center;
+		justify-content: space-between;
 
-  .open{
-    display: block;
-  }
+		.bd-dropdown-label {
+			width: 80px;
+			color: $seagul;
+			text-align: right;
+			margin-right: 32px;
 
+			label {
+				font-size: 10px;
+				font-weight: 300;
+				text-transform: uppercase;
+				}
+			}
+
+		.bd-dropdown-value {
+			flex-grow: 1;
+
+			span {
+				color: $nobel;
+			}
+
+			.item-selected {
+				color: $black;
+				}
+			}
+
+		.bd-dropdown-icon {
+			color: $nobel;
+			margin-right: 17px;
+		}
+
+		&:hover {
+			cursor: pointer;
+		}
+	}
+
+	.bd-dropdown-list {
+		width: 100%;
+		padding: 0;
+		border: 0;
+		margin: -1px 0 0;
+		border-radius: 0;
+
+		div {
+			display: flex;
+			height: 50px;
+			align-items: center;
+		}
+
+		ul {
+			overflow: scroll;
+			padding: 0;
+			margin: 0;
+			border-top: 1px solid $iron;
+			max-height: 150px;
+
+			li {
+				display: flex;
+				height: 50px;
+				background: $white;
+				color: $black;
+				padding-left: 17px;
+				border-bottom: 1px solid $iron;
+				align-items: center;
+
+				&.dropdown-header {
+					background: $white;
+					color: $nobel;
+					font-size: inherit;
+					border-top: 1px solid $iron;
+					border-bottom: 1px solid $iron;
+				}
+
+				&:hover {
+					background: $dropitem;
+					cursor: pointer;
+				}
+
+				a {
+					color: $black;
+				}
+			}
+		}
+
+		.dropdow-footer {
+			background: $white;
+			text-align: center;
+
+			button {
+				border: 0;
+				margin: 0 auto;
+				background: transparent;
+				color: $seagul;
+
+				&:focus {
+					outline: 0;
+				}
+			}
+		}
+	}
 }
