some changes to home component to test dropdown component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 Home page
 
 
-<div style="margin:50px auto; width:400px; background:#006cff;padding:20px;">
+<div style="margin:50px auto; width:400px; background:#c1c1c1;padding:20px;">
 
-<bd-dropdown></bd-dropdown>
+<bd-dropdown [items]="items"></bd-dropdown>
 
 </div>
