--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -33,11 +33,10 @@ $error-background: rgba(251,58,58,0.2);
 
   .bd-label{
     font-size: 10px;
-    width: 63px;
+    width: 80px;
     height: 100%;
     color: $nobel;
     text-transform: uppercase;
-    margin-left: 17px;
     label{
       display: flex;
       justify-content: flex-end;
@@ -118,6 +117,7 @@ $error-background: rgba(251,58,58,0.2);
 
 &.bd-collapsed-input{
     .bd-label {
+      padding-left: 17px;
       flex-grow: 1;
       color: $nobel;
       width: 100%;
