--- a/src/app/common/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/common/bd-dropdown/bd-dropdown.component.html
@@ -30,7 +30,7 @@
              {{item}}
       </li>
      <li class="dropdown-footer">
-       <button type="button" name="button">
+       <button>
            Add Contact
          </button>
      </li>
