--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -19,4 +19,7 @@
     <div class="menu-item" [routerLinkActive]="['active']">
         <a [routerLink]="['./#']">Menu item</a>
     </div>
+
+    <layout-switch [switchState]="switchState" (switchStateChange)="onSwitchStateChange($event)">
+    </layout-switch>
 </div>
