--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -1,5 +1,4 @@
 .side-menu {
-    position: fixed;
     width: 140px;
     height: 100%;
     background-color: #23282D;
@@ -41,8 +40,8 @@
 
     .logo-container {
         width:100%;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
         text-align: center;
 
         span {
