--- a/src/app/common/bd-typeahead/bd-typeahead.component.scss
+++ b/src/app/common/bd-typeahead/bd-typeahead.component.scss
@@ -1,7 +1,12 @@
 .bd-typeahead-container {
-    position: relative;
+  position: relative;
+
+  .loader {
+    height: 50px;
+  }
 
   .dropdown-menu {
     width: 100%;
+    margin-top: 0;
   }
 }
