--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,21 +11,6 @@ Home page
 >
 </datatable>
 
-<div style="width:500px; margin-top:100px;">
-<bd-input
-    placeholder="placeholder"
-    [collapsibleInput]="false"
-    [labelText]="'date'">
-    <span class="prefix" bd-prefix>$&nbsp;</span>
-</bd-input>
-
-<div style="margin-top:30px;"></div>
-
-<bd-input
-    [labelText]="'Estimated distance Estimated'"
-    [collapsibleInput]="true"
-    [attr.name]="'Andrew'">
-</bd-input>
-
-
+<div style="width:500px; margin-top:100px; margin-left:100px">
+<textarea style="resize: none; border: none; overflow: auto; padding: 0; background: lightblue; width:100%" md-autosize class="demo-textarea"></textarea>
 </div>
