--- a/src/app/common/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/common/bd-dropdown/bd-dropdown.component.html
@@ -1,38 +1,50 @@
 <div dropdown class="bd-dropdown-container" name="bd-dropdown-container">
-  <a dropdownToggle id="simple-dropdown" class="bd-dropdown-wrapper" name="bd-dropdown-wrapper">
-    <div class="bd-dropdown-label">
-      <label>
-        contact
-      </label>
-    </div>
-    <div class="bd-dropdown-value" name="bd-dropdown-value">
-      <span *ngIf="_currentValue === undefined">Select Contact</span>
-      <span class="item-selected" *ngIf="_currentValue">{{_currentValue}}</span>
-    </div>
-    <div class="bd-dropdown-icon">
-      <i class="fa fa-sort"></i>
-    </div>
-  </a>
+  <div dropdownToggle
+    id="bd-dropdown"
+    class="bd-dropdown-wrapper"
+    name="bd-dropdown-wrapper">
+      <div class="bd-dropdown-label">
+        <label>contact</label>
+      </div>
+      <div class="bd-dropdown-value" name="bd-dropdown-value">
+        <span
+          [class.item-selected]="isSelectedValue">
+            {{currentDisplayText}}
+        </span>
+      </div>
+      <div class="bd-dropdown-icon">
+        <i class="fa fa-sort"></i>
+      </div>
+  </div>
   <div
     dropdownMenu
     class="bd-dropdown-list"
-    aria-labelledby="simple-dropdown">
+    aria-labelledby="bd-dropdown">
     <ul>
       <li
+        *ngIf="dropdownHeaderTemplate"
         class="dropdown-header"
         attr.value="false"
         (click)="_handleDropdownHeaderClick($event)">
-          Leave empty
+          <template
+            [ngTemplateOutlet]="dropdownHeaderTemplate">
+          </template>
       </li>
       <li *ngFor="let item of _items"
           attr.value="{{item}}"
           (click)="_handleDropdownItemClick($event)">
-             {{item}}
+          <template
+            [ngTemplateOutlet]="dropdownItemTemplate"
+            [ngOutletContext]="{item: item}">
+          </template>
       </li>
-     <li class="dropdown-footer">
-       <button>
-           Add Contact
-         </button>
+     <li
+       *ngIf="dropdownFooterTemplate"
+       dropdownFooter="dropdownFooter"
+       class="dropdown-footer"
+       (click)="_handleFooterClick($event)">
+         <template [ngTemplateOutlet]="dropdownFooterTemplate">
+         </template>
      </li>
     </ul>
   </div>
