--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -58,7 +58,7 @@ $error-background: rgba(251,58,58,0.2);
     .bd-input-infix{
       @extend .flex-element;
       flex-grow: 1;
-      input{
+      input, textarea{
         position: relative;
         top: 0;
         left: 0;
