--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@ Home page
 
 <div style="width:500px; margin:100px auto">
   <bd-input
-     placeholder="placeholder"
+      placeholder="placeholder"
       [collapsibleInput]="false"
       [labelText]="'date'">
       <span class="prefix" bd-prefix>$&nbsp;</span>
@@ -26,5 +26,18 @@ Home page
       [collapsibleInput]="true"
       [attr.name]="'Andrew'">
   </bd-input>
-<textarea style="resize: none; border: none; overflow: auto; padding: 0; background: lightblue; width:100%" md-autosize class="demo-textarea"></textarea>
+    <div style="margin-top:30px;"></div>
+  <bd-textarea
+  [labelText]="'textarea'"
+  [collapsibleInput]="false"
+  >
+  <span class="prefix" bd-prefix>$&nbsp;</span>
+  </bd-textarea>
+
+  <div style="margin-top:30px;"></div>
+  <textarea md-autosize class="demo-textarea"></textarea>
+  <bd-textarea
+  [collapsibleInput]="true"
+  [labelText]="'textarea'">
+  </bd-textarea>
 </div>
