--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -1,64 +1,71 @@
+$shark: #23282d;
+$white: #fff;
+$black: #000;
+$logo-letter-color: #a4c2f4;
+$tango: #e67517;
+
+
 .side-menu {
-    width: 140px;
-    height: 100%;
-    background-color: #23282D;
-    z-index: 99999;
-    padding: 0 15px;
+	z-index: 99999;
+	width: 140px;
+	height: 100%;
+	padding: 0 15px;
+	background-color: $shark;
 
-    .menu-item {
-        display: block;
-        border-top: 15px solid #fff;
-        border-left: 15px solid #fff;
-        border-bottom: 7px solid #000;
-        border-right: 26px solid #000;
-        height: 40px;
-        width: 90%;
-        margin-bottom: 40px;
+	.menu-item {
+		display: block;
+		width: 90%;
+		height: 40px;
+		border-top: 15px solid $white;
+		border-left: 15px solid $white;
+		border-bottom: 7px solid $black;
+		border-right: 26px solid $black;
+		margin-bottom: 40px;
 
-        a {
-            color: #fff;
-            background-color: transparent;
-            position: relative;
-            bottom: -27px;
-            padding: 45px 40px 0 0;
-            margin-left: 15px;
-            left: -30px;
-            white-space: nowrap;
-            text-decoration: none;
-            cursor: pointer;
-        }
+		a {
+			position: relative;
+			padding: 45px 40px 0 0;
+			color: $white;
+			cursor: pointer;
+			background-color: transparent;
+			bottom: -27px;
+			margin-left: 15px;
+			left: -30px;
+			white-space: nowrap;
+			text-decoration: none;
+		}
 
-        &.active {
-            border-top-color: #a4c2f4;
-            border-left-color: #a4c2f4;
+		&.active {
+			border-top-color: $logo-letter-color;
+			border-left-color: $logo-letter-color;
 
-            a {
-                color: #a4c2f4;
-            }
-        }
-    }
+			a {
+				color: $logo-letter-color;
+			}
+		}
+	}
 
-    .logo-container {
-        width:100%;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        text-align: center;
+	.logo-container {
+		width: 100%;
+		text-align: center;
+		padding-top: 20px;
+		padding-bottom: 20px;
 
-        span {
-            font-family: Orbitron;
-            text-transform: uppercase;
-            font-weight: 600;
-        }
+		span {
+			font-family: Orbitron;
+			text-transform: uppercase;
+			font-weight: 600;
+		}
 
-        .logo-letter {
-            color: white;
-            font-size: 24px;
-        }
+		.logo-letter {
+			color: $white;
+			font-size: 24px;
+		}
 
-        .logo-number {
-            color: #E67517;;
-            margin-left: -3px;
-            font-size: 24px;
-        }
-    }
+		.logo-number {
+			color: $tango;
+			font-size: 24px;
+			margin-left: -3px;
+		}
+	}
 }
