--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,31 +1,24 @@
-Home page
-<datatable
-    class='material striped'
-    [rows]='rows'
-    [columns]="columns"
-    [columnMode]="'force'"
-    [headerHeight]="50"
-    [footerHeight]="50"
-    [rowHeight]="'auto'"
-    [limit]="10"
->
-</datatable>
+<multi-slot-layout>
+    <first-slot>
 
-<div style="width:500px; margin-top:100px; ">
-<bd-input
-    placeholder="placeholder"
-    [collapsibleInput]="false"
-    [labelText]="'Estimated distance calculate'">
-    <span class="prefix" bd-prefix>$&nbsp;</span>
-</bd-input>
+    </first-slot>
 
-<div style="margin-top:30px;"></div>
+    <second-slot>
+        <datatable class='material striped' [rows]='rows' [columns]="columns" [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50"
+            [rowHeight]="'auto'" [limit]="10">
+        </datatable>
+    </second-slot>
+    
+    <third-slot>
+        <div style="width:500px; margin-top:100px; ">
+            <bd-input placeholder="placeholder" [collapsibleInput]="false" [labelText]="'Estimated distance calculate'">
+                <span class="prefix" bd-prefix>$&nbsp;</span>
+            </bd-input>
 
-<bd-input
-    [labelText]="'Estimated'"
-    [collapsibleInput]="true"
-    [attr.name]="'Andrew'">
-</bd-input>
+            <div style="margin-top:30px;"></div>
 
-
-</div>
+            <bd-input [labelText]="'Estimated'" [collapsibleInput]="true" [attr.name]="'Andrew'">
+            </bd-input>
+        </div>
+    </third-slot>
+</multi-slot-layout>
