--- a/src/app/layout-switch/layout-switch.component.scss
+++ b/src/app/layout-switch/layout-switch.component.scss
@@ -1,20 +1,24 @@
+$white: #fff;
+$background-color: #ccc;
+
+
 .pane-switch-container {
 	text-align: center;
 	margin-top: 80px;
 
 	ul {
-        display: inline-block;
+		display: inline-block;
+		padding: 0;
 		list-style: none;
-        padding: 0;
 	}
 
 	li {
-		border: 1px solid #fff;
-		margin-left: -1px;
-		min-width: 15px;
 		display: inline;
 		height: 20px;
+		border: 1px solid $white;
 		background: none;
+		min-width: 15px;
+		margin-left: -1px;
 		float: left;
 
 		&:first-child {
@@ -26,7 +30,7 @@
 		}
 
 		&.active {
-			background: #ccc;
+			background: $background-color;
 		}
 	}
 }
