add form button component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,10 +7,9 @@ Home page
   </template>
 
   <template #dropdownFooterTemplate>
-    <button
-      class="form-button">
-        Add Contact
-    </button>
+    <bd-form-button
+      buttonText="Add Contact">
+    </bd-form-button>
   </template>
 
   <template #dropdownItemTemplate let-item="item">
